# parallel_programming

lab1/: CMakeLists.txt  Dockerfile  lab1.c
lab2/: CMakeLists.txt  lab2.c
lab3/: CMakeLists.txt  lab3.c
lab4/: lab4.c
lab5/: lab5.c
lab6/: lab6.c
lab7/: lab7.c
